k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gamedevsconnect-ingress
  namespace: gamedevsconnect
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: apis.gamedevsconnect.local
    http:
      paths:
      - path: /azure(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: api-azure
            port:
              number: 7001
      - path: /comment(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: api-comment
            port:
              number: 7002
      - path: /file(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: api-file
            port:
              number: 7003
      - path: /notification(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: api-notification
            port:
              number: 7004
      - path: /profile(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: api-profile
            port:
              number: 7005
      - path: /project(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: api-project
            port:
              number: 7006
      - path: /request(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: api-request
            port:
              number: 7007
      - path: /tag(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: api-tag
            port:
              number: 7008
      - path: /user(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: api-user
            port:
              number: 7009
